force-app/main/default/objects/Container__c/Container__c.object-meta.xml
<CustomObject>
    <description>This object will help users to keep details about the containers, such as size, type, availability etc.</description>
    <label>Container</label>
    <nameField>
        <label>Serial No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Containers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>