force-app/main/default/objects/Container__c/fields/ContainerImage__c.field-meta.xml
<CustomField>
    <fullName>ContainerImage__c</fullName>
    <formula>CASE( Type__c ,
      &apos;Temperature Sensitive&apos;, IMAGE(&apos;https://techproedu3-dev-ed--c.develop.vf.force.com/resource/1680362386000/TemperatureSensitiveContainer?&apos;, &apos;Temperature Sensitive Picture&apos;, 100, 120),
       &apos;General Purpose Picture&apos;, IMAGE(&apos;https://techproedu3-dev-ed--c.develop.vf.force.com/resource/1680439392000/GeneralPurposeContainer&apos;, &apos;General Purpose Picture&apos;, 100, 120) ,
         &apos;Tank&apos; ,IMAGE(&apos;https://techproedu3-dev-ed--c.develop.vf.force.com/resource/1680362486000/TankContainer?&apos;, &apos;Tank Picture Picture&apos;, 100, 120),
      null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContainerImage</label>
    <type>Text</type>
</CustomField>