force-app/main/default/objects/Container__c/fields/Reserved_By__c.field-meta.xml
<CustomField>
    <fullName>Reserved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Containers</relationshipName>
    <type>Lookup</type>
</CustomField>