force-app/main/default/objects/Container__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>Size of container</description>
    <inlineHelpText>Please choose the size of container. Choose only one value.</inlineHelpText>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 ft.</fullName>
            </value>
            <value>
                <fullName>10 ft.</fullName>
            </value>
            <value>
                <fullName>20 ft.</fullName>
            </value>
            <value>
                <fullName>40 ft.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>